--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,11 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Todos 2.0</title>
   <link href="./css/style.css" rel="stylesheet">
-  <!-- <script defer src="./js/fetch.js"></script> -->
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <script defer src="./js/06async.js"></script>
+  <!-- <script defer src="./js/01promise.js"></script> -->
+  <!-- <script defer src="./js/02fetch.js"></script> -->
+  <!-- <script defer src="./js/03axios.js"></script> -->
+  <script defer src="./js/04async.js"></script>
 </head>
 <body>
   <div class="container">
