docs : Add the ajax todolist

--- a/public/index.html
+++ b/public/index.html
@@ -7,10 +7,12 @@
   <title>Todos 2.0</title>
   <link href="./css/style.css" rel="stylesheet">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
-  <!-- <script defer src="./js/01promise.js"></script> -->
-  <!-- <script defer src="./js/02fetch.js"></script> -->
-  <!-- <script defer src="./js/03axios.js"></script> -->
-  <script defer src="./js/04async.js"></script>
+  <!-- <script defer src="./js/00xhr-1.js"></script> -->
+  <script defer src="./js/01xhr-2.js"></script>
+  <!-- <script defer src="./js/02promise.js"></script> -->
+  <!-- <script defer src="./js/03fetch.js"></script> -->
+  <!-- <script defer src="./js/04axios.js"></script> -->
+  <!-- <script defer src="./js/05async.js"></script> -->
 </head>
 <body>
   <div class="container">
